# easea

./: .gitattributes  .gitignore  CMakeLists.txt  Doxyfile  Easea.h  EaseaLex.cpp  EaseaLex.h  EaseaLex.l  EaseaParse.cpp  EaseaParse.h  EaseaParse.y  EaseaSym.cpp  EaseaSym.h  EaseaYTools.cpp  EaseaYTools.h  INSTALL.txt  Makefile  Makefile.old  README.md  [OUTDATED]INSTALL.md  apple.sh  archi.nz  clean.sh  cmake_install.cmake  config.h.in  debug.h  delete_files.c  dockerfile  easea.sln  index.html  install.sh  install_manifest.txt  makefile  myonemax.ez  onemax.ez  params.json  postinst  prerm
.github/workflows/: ci.yml  faster-ci.yml
GUIDE/: .gitignore  Makefile  README.md  package-lock.json  package.json
GUIDE/documentation/: doc_en.adoc  doc_en.html  doc_fr.adoc  doc_fr.html
GUIDE/src/: 3D_plot.py  advanced_option_widget.ts  compile_tab.ts  index.ts  island_options_win.ts  offspring_options_win.ts  parents_options_win.ts  paths.ts  plot.py  plot_generation.ts  plot_tab.ts  processus.ts  pseudo_term.ts  results_win.ts  run_options_win.ts  run_tab.ts  style.ts  update_graph_win.ts  utilities.ts  win_alert.ts
Test/: easea_regression.sh  easna_regression.sh
Test/xor_mnist/: CMakeLists.txt  architecture_mnist.nz  architecture_xor3.nz  dataset_xor3.csv  main.cpp
alexyacc/: makefile  yycback.cpp  yyccdeci.cpp  yycclex.cpp  yyccwork.cpp  yycdeci.cpp  yycdepop.cpp  yycdisc.cpp  yycdoutp.cpp  yycecho.cpp  yycerror.cpp  yycflex.cpp  yycgetch.cpp  yycgtok.cpp  yycinput.cpp  yyclcln.cpp  yyclcon.cpp  yyclcrea.cpp  yycldbug.cpp  yycldest.cpp  yycless.cpp  yycoutpt.cpp  yycparse.cpp  yycpcln.cpp  yycpcon.cpp  yycpcrea.cpp  yycpdbug.cpp  yycpdest.cpp  yycpop.cpp  yycpush.cpp  yycreset.cpp  yycsetin.cpp  yycsetup.cpp  yycsoflw.cpp  yycsskip.cpp  yycsssiz.cpp  yycstsiz.cpp  yycsusiz.cpp  yycsyner.cpp  yyctoflw.cpp  (+6 more)
alexyacc/include/: clex.h  cyacc.h  lex.h  milconv.h  miyconv.h  mlconv.h  mlex.h  myacc.h  myconv.h  yacc.h  yybdefs.h  yytdefs.h
boost/: cmdline.cpp  config_file.cpp  convert.cpp  makefile  makefile~  options_description.cpp  options_description.cpp~  parsers.cpp  positional_options.cpp  utf8_codecvt_facet.cpp  value_semantic.cpp  variables_map.cpp  winmain.cpp
boost/boost/: any.hpp  assert.hpp  bind.hpp  call_traits.hpp  config.hpp  function.hpp  get_pointer.hpp  implicit_cast.hpp  integer.hpp  integer_fwd.hpp  integer_traits.hpp  iterator.hpp  lexical_cast.hpp  limits.hpp  mem_fn.hpp  program_options.hpp  ref.hpp  shared_ptr.hpp  static_assert.hpp  throw_exception.hpp  token_functions.hpp  token_iterator.hpp  tokenizer.hpp  version.hpp  visit_each.hpp
boost/detail/: utf8_codecvt_facet.cpp
compiler/: Easea.h  EaseaLex.cpp  EaseaLex.h  EaseaLex.l  EaseaParse.cpp  EaseaParse.hpp  EaseaParse.y  EaseaSym.cpp  EaseaSym.h  EaseaYTools.cpp  EaseaYTools.h  NeuralLex.l  NeuralParse.y  Win32Workarounds.cpp  Win32Workarounds.h  debug.h  easea.cpp  easea.vcxproj  easena.cpp  errors.cpp  errors.h
dev/c4.5/: card.ez
dev/c4.5_abst/: card.ez
dev/c4.5_geo/: card.ez
dev/c4.5_multi-class/: card.ez
dev/c4.5_toy/: card.ez  run.sh
dev/tgp_regression/: data.csv  data_koza_sextic.csv  tgp_regression.ez  tgp_regressionEval.cu  tgp_regressionEval.cu-sav
dev/tgp_regression_drone/: tgp_regression.ez  tgp_regressionEval.cu
doc/: [OUTDATED] easea_manual.tex  communication.md  easea-grammar.xhtml  easea_manual.tex  packet.tex  syntax.ez  syntax.md
easea-ui/: .gitignore  Makefile  README.md  package.json  tsconfig.json  webpack.config.js
easea-ui/documentation/: doc_en.adoc  doc_en.html  doc_fr.adoc  doc_fr.html
easea-ui/src/: 3D_plot.py  advanced_option_widget.ts  compile_tab.ts  index.ts  offspring_options_win.ts  parents_options_win.ts  plot.py  plot_generation.ts  plot_tab.ts  pseudo_term.ts  results_win.ts  run_options_win.ts  run_tab.ts  style.ts  update_graph_win.ts  utilities.ts
examples/: EAtemplate.ez  build-all.sh  regression.sh
examples/ant/: README.txt  ant.ez
examples/bbob2013/: MY_OPTIMIZER.c  Makefile  Makefile_bbob  README.txt  bbob2013.cpp  bbob2013.ez  bbob2013Individual.cpp  bbob2013Individual.hpp  bbobStructures.h  benchmarks.c  benchmarks.h  benchmarksDeclare.c  benchmarksdeclare.c  benchmarksdeclare.h  benchmarkshelper.c  benchmarkshelper.h  benchmarksnoisy.c  exampleexperiment.c  fgeneric.c
examples/binaireTest/: binaire.ez
examples/cmaes_cuda_test/: README.txt  cigtabGPU.ez
examples/cmaes_tests/: README.txt  cigtab.ez
examples/coco2018/: README.txt  cleanup.sh  coco.c  coco.h  coco2018.ez  core  (+2 more)
examples/math/: CMakeLists.txt  sin.cpp
exemples/: listsort.ez  onemax.ez
libeasea/: CAlgorithm.cpp  CBoundary.cpp  CCmaes.cpp  CCmaesCuda.cpp  CComGridFileServer.cpp  CComGridUDPServer.cpp  CComUDPLayer.cpp  CComWorker.cpp  CComWorkerListmanager.cpp  CComWorkerListmanager_2.cpp  CComWorkerListmanager_3.cpp  CConstraint.cpp  CCuda.cpp  CEvolutionaryAlgorithm.cpp  CGPNode.cpp  CGnuplot.cpp  CGrapher.cpp  CIndividual.cpp  CLogger.cpp  CMatrix.cpp  CMonitorModule.cpp  CMonitorUtils.cpp  CNsgaII.cpp  COptionParser.cpp  CPermutation.cpp  CPopulation.cpp  CProbability.cpp  CProblem.cpp  CPseudoRandom.cpp  CQMetricsGD.cpp  CQMetricsHV.cpp  CQMetricsIGD.cpp  CRandom.cpp  CRandomGenerator.cpp  CSelectionOperator.cpp  CStats.cpp  CStoppingCriterion.cpp  CVariable.cpp  ClientMonitorParameter.cpp  CmoIndividual.cpp  (+16 more)
monitor/: Makefile  experimetnmonitor.cpp  experimetnmonitor.h  monitor.cpp
old/: EaseaParse.cpp
old_alexyacc/: yycclex.cpp  yycdepop.cpp  yycecho.cpp  yycgetch.cpp  yycinput.cpp  yycsetup.cpp  yycuncin.cpp
scripts/: cde.jdl  cde_template.jdl  create_package.sh  execute-cde.sh  execute-cde_template.sh  status_job.sh
test_compiler/: generateDiff.sh  generateSource.sh
tpl/: ASREA.tpl  CDAS.tpl  CMAES.tpl  CMAES_CUDA.tpl  CUDA.tpl  CUDA_GP.tpl  CUDA_MEM.tpl  CUDA_MO.tpl  CUDA_QAES.tpl  DE.tpl  EO.tpl  EOv07.tpl  FastEMO.tpl  GALib.tpl  GDE.tpl  GP.tpl  GPU.tpl  IBEA.tpl  MODERN.tpl  MOEAD.tpl  Makefile  NSGA2.tpl  NSGAII.tpl  NSGAIII.tpl  QAES.tpl  QIEA.tpl  QIEAIII.tpl  QIEAIV.tpl  STD.tpl  STD_MEM.tpl  STD_MO.tpl  empty_tpl.tpl
(+855 files in other folders)
